# Prische-Benchmark

./: .gitignore  LICENSE  README.md  architecture.md  build.sh  cpu_temp_monitor.py  dxbenchmark_option.txt  gst_benchmark_pipeline  mediamtx.yml  profiler.json  rtsp_address.txt.example  run_dxbenchmark.sh  run_pipeline_benchmark.py  troubleshooting_debian12.md  viewer.html  webserver.py  yolov8_pose_plan.md  사용설명서.md
model_single/: .gitkeep
pipeline_gst/: CMakeLists.txt  main.cpp
rk3568_result_radxa3A/: DXBENCHMARK_2026_02_20_095444.csv  DXBENCHMARK_2026_02_20_095444.html  DXBENCHMARK_2026_02_20_095444.json
rk3588_result_orangePi/: DXBENCHMARK_2026_02_20_105146.csv  DXBENCHMARK_2026_02_20_105146.html  DXBENCHMARK_2026_02_20_105146.json
rk3588_result_radxarock5B/: DXBENCHMARK_2026_02_24_161738.csv  DXBENCHMARK_2026_02_24_161738.html  DXBENCHMARK_2026_02_24_161738.json
rk3588_result_wavedyne/: DXBENCHMARK_2026_02_20_102112.csv  DXBENCHMARK_2026_02_20_102112.html  DXBENCHMARK_2026_02_20_102112.json
test_folder/: test_file.txt
